# fAInancial-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.langfuse.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  SAGA-OPERATIONS.md  settings.json
.github/workflows/: ci.yml
agent/: graph.py  loop.py  main.py  mcp_client.py  requirements.txt  session.py
data/eval/: qa_set.json
docs/: NAVIGATION.md  dod.md  tasks.md  verify-report-20260312.md
docs/adr/: 001-embedding-model-voyage-ai.md  ADR-001-langgraph.md  ADR-002-gemini.md  ADR-003-mcp-fastmcp.md  ADR-004-voyage-ai.md  ADR-005-faiss.md  ADR-006-fastapi.md  ADR-007-streamlit.md  ADR-008-docker-compose.md  ADR-009-langfuse.md  ADR-010-dart-krx.md  README.md
docs/claude/: rag-eval-inefficiency.md
docs/demo/: README.md
docs/handoffs/: HANDOFF.md
docs/improvements/: INDEX.md
docs/plans/: 2026-03-10-phase0-implementation-design.md  2026-03-10-phase0-implementation.md  2026-03-10-phase1-rag-design.md  2026-03-10-phase1-rag-implementation.md  2026-03-11-phase2-agent-enhancement.md  2026-03-11-phase2-tasks.md  2026-03-12-phase3a-productionization.md  2026-03-12-phase3a-tasks.md  phase1-rag.md
mcp_server/: dart_tools.py  krx_tools.py  main.py  rag_search.py  requirements.txt
scripts/: chunker.py  dart_downloader.py  evaluate_rag.py  html_parser.py  index_documents.py  rag_search_client.py  requirements.txt
tests/: conftest.py
tests/agent/: conftest.py  test_graph.py  test_loop.py  test_main.py  test_mcp_client.py  test_session.py
ui/: Dockerfile  app.py
(+17 files in other folders)
